<resources>
    <string name="app_name">HardingLaw</string>
    <string name="title_home">Home</string>
    <string name="title_aboutus">About Us</string>
    <string name="title_media">Media</string>
    <string name="title_contactus">Contact Us</string>
    <string name="title_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="send_push_notifications">Send Push Notifications</string>
    <string name="send_notifications_chat"><![CDATA[Send notifications & Chat]]></string>
    <string name="start_chat">Start Chat</string>

</resources>
