<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dcmmoguls.hardinglaw.AdminHomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="@drawable/topbarback"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_notifications_chat"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnPush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_roundback"
        android:text="@string/send_push_notifications"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.349"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />


    <Button
        android:id="@+id/btnChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnPush"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_roundback"
        android:text="@string/start_chat"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPush"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

</android.support.constraint.ConstraintLayout>
